Add cores extras, adicionado sessao para delete de arquivos CIM

--- a/views/deleteitens.ejs
+++ b/views/deleteitens.ejs
@@ -31,6 +31,31 @@
     function copyItem(item){
         navigator.clipboard.writeText(item)
     }
+
+    // return a promise
+    function copyToClipboard(textToCopy) {
+    // navigator clipboard api needs a secure context (https)
+    if (navigator.clipboard && window.isSecureContext) {
+        // navigator clipboard api method'
+        return navigator.clipboard.writeText(textToCopy);
+    } else {
+        // text area method
+        let textArea = document.createElement("textarea");
+        textArea.value = textToCopy;
+        // make the textarea out of viewport
+        textArea.style.position = "fixed";
+        textArea.style.left = "-999999px";
+        textArea.style.top = "-999999px";
+        document.body.appendChild(textArea);
+        textArea.focus();
+        textArea.select();
+        return new Promise((res, rej) => {
+            // here the magic happens
+            document.execCommand('copy') ? res() : rej();
+            textArea.remove();
+        });
+    }
+}
 </script>
 
 <body>
@@ -54,7 +79,7 @@
         <% itens.forEach((item)=>{ %>
         <div class="item">
             <span><%=item%> - </span>
-            <img width="20px" src="/images/copy.png" onclick="copyItem('<%=item%>')">
+            <img width="20px" src="/images/copy.png" onclick="copyToClipboard('<%=item%>')">
             <br>--------------------<br>
         </div>
         <%}) %>
