--- a/views/deleteitens.ejs
+++ b/views/deleteitens.ejs
@@ -12,6 +12,10 @@
         color: white;
         font-style:initial;
     }
+    table {
+        margin-left: auto;
+        margin-right: auto;
+    }
     .delete_file {
         margin-top: 20%;
     }
@@ -22,40 +26,20 @@
     .item img:hover {
         cursor: pointer;
     }
+
+    .div-table {
+        display: inline-block;
+        text-align: center;
+    }
      
     </style>
    
 </head>
 
 <script>
-    function copyItem(item){
-        navigator.clipboard.writeText(item)
-    }
 
-    // return a promise
-    function copyToClipboard(textToCopy) {
-    // navigator clipboard api needs a secure context (https)
-    if (navigator.clipboard && window.isSecureContext) {
-        // navigator clipboard api method'
-        return navigator.clipboard.writeText(textToCopy);
-    } else {
-        // text area method
-        let textArea = document.createElement("textarea");
-        textArea.value = textToCopy;
-        // make the textarea out of viewport
-        textArea.style.position = "fixed";
-        textArea.style.left = "-999999px";
-        textArea.style.top = "-999999px";
-        document.body.appendChild(textArea);
-        textArea.focus();
-        textArea.select();
-        return new Promise((res, rej) => {
-            // here the magic happens
-            document.execCommand('copy') ? res() : rej();
-            textArea.remove();
-        });
-    }
-}
+
+
 </script>
 
 <body>
@@ -64,26 +48,43 @@
         <form action="/images/itens/deletefile" method="post">
             <input name="file" id="input_delete" class="input_delete">
             <button type="submit" class="buttonDel" id="buttonDel">X DELETE</button>
-        </form>
-        
-    </div>
-
-    
-    <div>
-        
+        </form>   
     </div>
 
     <div class="list_itens">
         <p>Arquivos existentes no diretório</p>
+        <% 
+        function divideNumber(number, parts) {
+            const chunkSize = Math.floor(number / parts);
+            const remainder = number % parts;
+            const result = [];
+            for (let i = 0; i < parts; i++) {
+              result.push(chunkSize);
+            }
+            for (let i = 0; i < remainder; i++) {
+              result[i] += 1;
+            }
+            return result;
+          }
+
         
-        <% itens.forEach((item)=>{ %>
-        <div class="item">
-            <span><%=item%> - </span>
-            <img width="20px" src="/images/copy.png" onclick="copyToClipboard('<%=item%>')">
-            <br>--------------------<br>
+        let totalDivPorQuatro = divideNumber(itens.length, 4);
+        
+        let parte1 = totalDivPorQuatro[0];
+        let parte2 = totalDivPorQuatro[0]+totalDivPorQuatro[1];
+        let parte3 = parte2+totalDivPorQuatro[2];
+        let parte4 = parte3+totalDivPorQuatro[3];
+        let qtdPrmeiraTabela = itens.slice(0,parte1);
+        let qtdSegundaTabela = itens.slice(parte1, parte2);
+        let qtdTerceiraTabela = itens.slice(parte2, parte3);
+        let qtdQuartaTabela = itens.slice(parte3, parte4); 
+        %>
+        <div class="div-container">
+        <div class="div-table"><%- include('./deleteitenstable', {itens:qtdPrmeiraTabela}); %></div>
+        <div class="div-table"><%- include('./deleteitenstable', {itens:qtdSegundaTabela}); %></div>
+        <div class="div-table"><%- include('./deleteitenstable', {itens:qtdTerceiraTabela}); %></div>
+        <div class="div-table"><%- include('./deleteitenstable', {itens:qtdQuartaTabela}); %></div>
         </div>
-        <%}) %>
-        
     </div>
 </body>
 
