Adicionado Peso e Quantidade na FIla de prod

--- a/views/fila.ejs
+++ b/views/fila.ejs
@@ -220,8 +220,8 @@
                         <td class="numero_op"><%=maquina.op%></td>
                         <td><%=functions.dateFormat("custom",maquina.inicioprog)%></td>
                         <td><%=functions.dateFormat("custom",maquina.fimprog)%></td>
-                        <td><%=maquina.peso.toLocaleString('pt-BR')%></td>
-                        <td><%=maquina.quantidade.toLocaleString('pt-BR')%></td>
+                        <td><%=maquina.peso%></td>
+                        <td><%=maquina.quantidade%></td>
                         <td class="codigo_item" name="codigo_item" id="codigo_item"><%=maquina.codigo_item%></td>
                         <td><%=maquina.descricao_item%></td>
                         <td>
