Adicionado Peso e Quantidade na FIla de prod

--- a/views/fila.ejs
+++ b/views/fila.ejs
@@ -203,7 +203,7 @@
                     <% 
                     let opMRP = maquina.filter(ele => ele.mrp !== null);
                     let guposDeMrp = [];
-                    //const db = require("../db.js");
+                    //const db = require("../db.js")
                     //const tipo_imagem = await db.selectPerfilCores(codigo_item);
                     //opMRP.forEach(function(element){
                     //    console.log(element);
