Adicionado coluna de velocidade

--- a/views/fila.ejs
+++ b/views/fila.ejs
@@ -196,7 +196,7 @@
                     <th>Código Item</th>
                     <th>Descrição Item</th>
                     <% if ( maquina[0].recurso.toString().startsWith("2") ){ %>
-                        <th>Velocidade</th>
+                        <th>Velocidade (mpm)</th>
                     <% } %>
                     <th>Imagem do Item</th>
                     <th>Perfil de Cores</th>
