Adicionado validacao para qunado nao encontrar recuros na fila, exiba uma mensagem amigavel para o usuario

--- a/views/fila_sem_prog.ejs
+++ b/views/fila_sem_prog.ejs
@@ -11,15 +11,16 @@
         text-align: justify;
         color: white;
     }
-    .headerFila {
+    h2 {
         display: inline-block;
+        text-align: center;
     }   
     </style>
     
 </head>
 <body>
     <h2>
-        Recurso sem OPs programadas
+        Recurso inexistente ou sem OPs programadas !
     </h2>
 </body>
 
