Adicionado validacao para qunado nao encontrar recuros na fila, exiba uma mensagem amigavel para o usuario

--- a/views/fila_sem_prog.ejs
+++ b/views/fila_sem_prog.ejs
@@ -8,20 +8,28 @@
     <style>
         body {
         background-color: #013e80;
-        text-align: justify;
         color: white;
+        margin: 0px;
     }
-    h2 {
-        display: inline-block;
-        text-align: center;
-    }   
+    .container {
+        width: 100vw;
+        height: 100vh;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+    }
+    .box {
+        font-size: 40px;
+    }  
     </style>
     
 </head>
 <body>
-    <h2>
-        Recurso inexistente ou sem OPs programadas !
-    </h2>
+    <div class="container">
+        <div class="box">
+            Recurso inexistente ou sem OPs programadas !
+        </div>
+    </div> 
 </body>
-
 </html>
