--- a/views/perfilcores.ejs
+++ b/views/perfilcores.ejs
@@ -6,26 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil de Cores</title>
     <style>
-        body {
-        background-color: #013e80;
-        text-align: center;
-        color: white;
-        font-style:initial;
-    }
-    table, th {
-        border:2px solid black;
-    }
-    th {
-        background-color: grey;
-    }
-    td {
-        border:2px solid rgb(0, 0, 0);
-        background-color: rgb(97, 97, 97);
-        font-weight:bold;
-    }
-    .td-cor {
-        text-shadow: 0 0 3px #000000, 0 0 5px #000000;
-    }
+ body {
+    background-color: #0a192f;
+    font-family: 'Roboto', sans-serif;
+    color: #ffffff;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    text-align: center;
+}
+
+table {
+    border-collapse: collapse;
+    border: 2px solid #2e3d58;
+    width: 100%;
+    max-width: 900px;
+    margin: 20px auto;
+}
+
+th {
+    border: 2px solid #2e3d58;
+    background-color: #394867;
+    color: #ffffff;
+    padding: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+td {
+    border: 2px solid #2e3d58;
+    background-color: #4f608b;
+    padding: 8px;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+.td-cor {
+    text-shadow: 0 0 3px #000000, 0 0 5px #000000;
+}
      
     </style>
     
@@ -43,7 +65,7 @@
                     <th>Cor</th>
                     <th>Anilox</th>
                     <th>Densidade</th>
-                    <th>TV</th>
+                    <th>TV - 25/50/75</th>
                     <th>LAB</th>
                 </tr>
                 <tr>
