Adicionado recurso para que na url da imagem (usada na fila) nao seja necessario inserir a extensao do arquivo. Foi adicionado uma condição na rota /images/itens em que verifica a extensao do arquivo existente, deixando assim dinamica conforme o arquivo disponibilizao

--- a/views/fila.ejs
+++ b/views/fila.ejs
@@ -277,7 +277,7 @@
                             <% if (maquina.TIPO_IMAGEM) {
                                 maquina.TIPO_IMAGEM.forEach(function(tipo_imagem){ 
                                 let codItemTipoImg = tipo_imagem.codigo_item + '-' + tipo_imagem.descricao_tipo_imagem.charAt(0); %>
-                                <button class="buttonImagem"><a target="_blank" href="/images/itens/<%=codItemTipoImg%>.jpg"><%=tipo_imagem.descricao_tipo_imagem%></a></button>
+                                <button class="buttonImagem"><a target="_blank" href="/images/itens/<%=codItemTipoImg%>"><%=tipo_imagem.descricao_tipo_imagem%></a></button>
                             <%  })
                             } %>
                         <td>
