Adicionado OP Componente nos detalhes

--- a/views/componentes_detalhes.ejs
+++ b/views/componentes_detalhes.ejs
@@ -61,7 +61,7 @@ td {
         
             <table style="width:100%">
                 <tr>
-                    <th>OP</th>
+                    <th>OP Componente</th>
                     <th>Etapa</th>
                     <th>Recurso</th>
                     <th>Componete</th>
@@ -71,7 +71,7 @@ td {
                 <tr>
                     <% componentes_op.forEach(function(componentes) { 
                         %>
-                        <td class= "td-cor"><%=componentes.op%></td>
+                        <td class= "td-cor"><%=componentes.op_componente%></td>
                         <td class= "td-cor"><%=componentes.etapa%></td>
                         <td class= "td-cor"><%=componentes.recurso%></td>
                         <td class= "td-cor"><%=componentes.componente%></td>
